[package]
name = "tensorman"
version = "0.1.0"
repository = "https://github.com/pop-os/tensorman"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "Tensorflow Docker Container Manager"
keywords = ["tensorflow", "docker"]
categories = [ "development-tools" ]
license = "GPL-3.0"
readme = "README.md"
edition = "2018"

[dependencies]
bitflags = "1.2"
nix = "0.15"
fern = "0.5"
tabular = "0.1"
xdg = "2.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
bollard = "0.8"
failure = "0.1"
tokio = "0.2"
futures = "0.1"
chrono = "0.4"
dirs = "2.0"
thiserror = "1.0.3"
anyhow = "1.0.19"
