[package]
name = "tensorman"
version = "0.1.0"
repository = "https://github.com/pop-os/tensorman"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "Tensorflow Docker Container Manager"
keywords = ["tensorflow", "docker"]
categories = [ "development-tools" ]
license = "GPL-3.0"
readme = "README.md"
edition = "2018"

[dependencies]
bitflags = "1.2"
nix = "0.15"
tabular = "0.1"
xdg = "2.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.3"
anyhow = "1.0.19"