[package]
name = "tensorman"
version = "0.2.0"
repository = "https://github.com/pop-os/tensorman"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "Tensorflow Docker Container Manager"
keywords = ["tensorflow", "docker"]
categories = [ "development-tools" ]
license = "GPL-3.0"
readme = "README.md"
edition = "2018"

[dependencies]
bitflags = "2.5.0"
nix = { version = "0.29", features = ["user"] }
tabular = "0.2.0"
xdg = "2.2"
toml = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.3"
anyhow = "1.0.19"
